<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ordersFragment">

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.wooauto.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.wooauto.ui.orders.OrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details">
        <argument
            android:name="orderId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.wooauto.ui.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_productsFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.wooauto.ui.products.ProductDetailsFragment"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="productId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.wooauto.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_printerSetupFragment"
            app:destination="@id/printerSetupFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_websiteSetupFragment"
            app:destination="@id/websiteSetupFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_soundSetupFragment"
            app:destination="@id/soundSetupFragment" />
    </fragment>

    <fragment
        android:id="@+id/printerSetupFragment"
        android:name="com.wooauto.ui.settings.PrinterSetupFragment"
        android:label="@string/printer_setup"
        tools:layout="@layout/fragment_printer_setup" />

    <fragment
        android:id="@+id/websiteSetupFragment"
        android:name="com.wooauto.ui.settings.WebsiteSetupFragment"
        android:label="@string/website_setup"
        tools:layout="@layout/fragment_website_setup" />

    <fragment
        android:id="@+id/soundSetupFragment"
        android:name="com.wooauto.ui.settings.SoundSetupFragment"
        android:label="@string/sound_setup"
        tools:layout="@layout/fragment_sound_setup" />

</navigation>